# nw-check

./: .pre-commit-config.yaml  IMPROVEMENTS.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
nw_check/: __init__.py  cli.py  diff.py  filters.py  inventory.py  link_infer.py  lldp_snmp.py  mermaid.py  models.py  normalize.py  output.py  supervisor.py
samples/: devices.csv  tobe.csv
tests/: test_diff.py  test_filters.py  test_inventory.py  test_link_infer.py  test_lldp_snmp.py  test_mermaid.py  test_normalize.py  test_output.py  test_supervisor.py
