[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nw-check"
version = "0.1.0"
description = "Network wiring validation via LLDP and CSV intents."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "nw-check contributors" }]

[project.scripts]
nw-check = "nw_check.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nw_check*"]
exclude = ["samples*", "tests*"]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
  "pylint>=3.2.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.pylint.main]
py-version = "3.10"

[tool.pylint."messages control"]
disable = [
  "too-few-public-methods",
  "duplicate-code",
  "too-many-instance-attributes",
  "too-many-locals",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
pythonpath = ["."]
